--- a/assets/css/scss/_base.scss
+++ b/assets/css/scss/_base.scss
@@ -25,10 +25,9 @@ html {
 }
 body {
     background: #f4f6f6;
-    font-size: 14px;
-    font-size: 1.4rem;
-    line-height: 24px;
-    line-height: 2.4rem;
+    font-size: 16px;
+    font-size: 1.6rem;
+    line-height: 1.5em;
     min-height: 100%;
     width: 100%;
 }
