--- a/templates/forum/topic/followed.html
+++ b/templates/forum/topic/followed.html
@@ -21,6 +21,8 @@
 
 
 {% block content %}
+    {% include "misc/pagination.part.html" with position="top" %}
+
     {% for topic in followed_topics %}
         {% include "forum/includes/topic_row.part.html" %}
     {% endfor %}
