--- a/templates/member/settings/base.html
+++ b/templates/member/settings/base.html
@@ -21,7 +21,7 @@
             <ul>
                 <li><a href="{% url "zds.member.views.settings_profile" %}">Profil</a></li>
                 <li><a href="{% url "zds.member.views.settings_account" %}">Compte</a></li>
-                <li><a href="{% url "zds.member.views.settings_user" %}">Pseudo/Email</a></li>
+                <li><a href="{% url "zds.member.views.settings_user" %}">Pseudo et e-mail</a></li>
             </ul>
         </div>
     </aside>
