--- a/templates/member/settings/profile.html
+++ b/templates/member/settings/profile.html
@@ -23,5 +23,7 @@
 
 
 {% block content %}
-    {% crispy form %}
+    <div class="content-wrapper">
+        {% crispy form %}
+    </div>
 {% endblock %}
