--- a/templates/member/settings/user.html
+++ b/templates/member/settings/user.html
@@ -4,20 +4,20 @@
 
 
 {% block title %}
-   Pseudo/Email
+   Pseudo et e-mail
 {% endblock %}
 
 
 
 {% block breadcrumb %}
     <li><a href="{% url "zds.member.views.settings_profile" %}">Paramètres</a></li>
-    <li>Pseudo/Email</li>
+    <li>Pseudo et e-mail</li>
 {% endblock %}
 
 
 
 {% block headline %}
-    Pseudo/Email
+    Pseudo et e-mail
 {% endblock %}
 
 
