--- a/templates/misc/member_item.part.html
+++ b/templates/misc/member_item.part.html
@@ -1,8 +1,12 @@
 {% load profile %}
 
+
+
 {% with profile=member|profile %}
     <a href="{{ member.get_absolute_url }}">
-        <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
+    	{% if avatar %}
+        	<img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
+    	{% endif %}
         {{ member.username }}
 
         {% if info %}
