--- a/templates/member/member_item_common.part.html
+++ b/templates/member/member_item_common.part.html
@@ -2,7 +2,7 @@
 
 {% with profile=member|profile %}
 <a href="{{ member.get_absolute_url }}" class="member-item">
-    <img src="{{ profile.get_avatar_url }}" width="16" height="16" alt="Avatar" />
+    <img src="{{ profile.get_avatar_url }}" width="16" height="16" alt="Avatar" class="hide-for-small"/>
     {{ member.username }}
 </a>
 {% endwith %}
