--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -41,7 +41,7 @@
 // We use these to control various global styles
 $body-bg: #f4f6f6;
 // $body-font-color: #222;
-$body-font-family: "Lucida Grande", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Ubuntu", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -118,7 +118,7 @@ $medium-range: (64em, 64em);
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-$header-font-family: "Proxima","Lucida Grande";
+$header-font-family: "Proxima", "Lucida Grande";
 // $header-font-weight: normal;
 // $header-font-style: normal;
 // $header-font-color: #222;
