hotfix bug forum

--- a/templates/forum/find_post.html
+++ b/templates/forum/find_post.html
@@ -43,7 +43,7 @@
                     {{ post.pubdate|naturaltime }}
                 </td>
                 <td>
-                    {{ post.text|truncatechars:200|emarkdown }}
+                    {{ post.text|truncatechars:200|emarkdown|striptags }}
                 </td>
             </tr>
             {% endfor %}
