--- a/templates/forum/post.part.html
+++ b/templates/forum/post.part.html
@@ -112,7 +112,7 @@
 
                 <div class="message-content">
                     {% if post.is_visible %}
-                    {{ post.text|emarkdown }}
+                    {{ post.text_html|safe }}
                     {% endif %}
                 </div>
                 </div>
