Issue #456 - Add random quote on home page

--- a/templates/home.html
+++ b/templates/home.html
@@ -59,6 +59,9 @@ class="active"
 
 {# Content #}
 {% block content %}
+	<div class="large-12 columns">
+		<p>{{ quote }}</p>
+	</div>
     <div class="large-6 columns">
       
         <h2 class="box article">Derniers Articles</h2>
