--- a/templates/tutorial/find_betatutorial.html
+++ b/templates/tutorial/find_betatutorial.html
@@ -39,7 +39,7 @@
                     </div>
                 </td>
                 <td>
-                    {{ tuto.get_introduction|truncatechars:200|emarkdown }}
+                    {{ tuto.get_introduction|truncatechars:200|emarkdown|striptags }}
                 </td>
             </tr>
             {% endfor %}
