--- a/templates/member/base_read.html
+++ b/templates/member/base_read.html
@@ -3,6 +3,7 @@
 {% block headline %}{% endblock %}
 
 {% block sidebar %}
+    {% block headline-actions %}{% endblock %}
     <form action="{% url "zds.member.views.modify_profile" profile.user.pk %}" method="POST" id="edit_form">
     <h3>Activités</h3>
     <ul>
