--- a/templates/member/settings_base.html
+++ b/templates/member/settings_base.html
@@ -4,21 +4,15 @@
    Paramètres
 {% endblock %}
 
-{% block headline %}
-	<h2 class="box member">
-        Paramètres
-    </h2>
-{% endblock %}
+{% block head-title %} Paramètres {% endblock %}
 
 {% block headline-actions %}
-<div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Navigation">
-    <h3>Navigation</h3>
-    <ul>
-        <li><a href="{% url "zds.member.views.settings_profile" %}">Profil</a></li>
-        <li><a href="{% url "zds.member.views.settings_account" %}">Compte</a></li>
-        <li ><a href="{% url "zds.member.views.settings_user" %}">Pseudo/Email</a></li>
-    </ul>
-</div>
+<h3>Navigation</h3>
+<ul>
+    <li><a href="{% url "zds.member.views.settings_profile" %}">Profil</a></li>
+    <li><a href="{% url "zds.member.views.settings_account" %}">Compte</a></li>
+    <li ><a href="{% url "zds.member.views.settings_user" %}">Pseudo/Email</a></li>
+</ul>
 {% endblock %}
 
 {% block content %}
