--- a/templates/home.html
+++ b/templates/home.html
@@ -103,7 +103,7 @@ class="active"
     </div>
 
     <div class="large-6 columns">
-        <h2 class="box tutoriel">Dernier tutoriels</h2>
+        <h2 class="box tutoriel">Derniers tutoriels</h2>
         {% cache 600 top_tutos %}
         {% if last_tutorials %}
             {% for tutorial in last_tutorials %}
