--- a/templates/forum/post/edit.html
+++ b/templates/forum/post/edit.html
@@ -26,5 +26,9 @@
 
 
 {% block content %}
+	{% captureas form_action %}
+        {% url "zds.forum.views.answer" %}?sujet={{ topic.pk }}
+    {% endcaptureas %}
+
     {% include "misc/message_form.html" with member=user %}
 {% endblock %}
