--- a/templates/mp/topic/index.html
+++ b/templates/mp/topic/index.html
@@ -30,50 +30,6 @@
 
 
 
-{% block sidebar_actions %}
-    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
-        <h3>Actions</h3>
-        <ul>
-            <li>
-                <a href="{% url "zds.mp.views.new" %}">
-                    Nouvelle conversation
-                </a>
-            </li>
-
-            {% if topic.author == user %}
-                <li>
-                    <a href="#add-participant">Ajouter un membre</a>
-                    <form action="{% url "zds.mp.views.add_participant" %}" mathod="post" id="add-participant">
-                        <p>
-                            Vous allez rajouter un nouveau membre dans la conversation privé.
-                        </p>
-                        <input type="hidden" name="topic_pk" value="{{ topic.pk }}">
-                        <input type="text" class="input" name="user_pk" placeholder="Pseudo du membre">
-
-                        {% csrf_token %}
-                        <button type="submit">Ajouter</button>
-                    </form>
-                </li>
-            {% endif %}
-
-            <li>
-                <a href="#leave-conversation">Quitter la conversation</a>
-                <form action="{% url "zds.mp.views.leave" %}" mathod="post" id="leave-conversation">
-                    <p>
-                        Attention, vous vous appretez à quitter définitivement de cette conversation.
-                    </p>
-                    <input type="hidden" name="topic_pk" value="{{ topic.pk }}">
-
-                    {% csrf_token %}
-                    <button type="submit">Confirmer</button>
-                </form>
-            </li>
-        </ul>
-    </div>
-{% endblock %}
-
-
-
 {% block content %}
     <div class="authors content-wrapper">
         <span class="authors-label">Participants : </span>
@@ -102,7 +58,7 @@
                 {% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}&amp;cite={{ post.pk }}
             {% endcaptureas %}
 
-            {% include 'misc/message.part.html' %}
+            {% include 'misc/message.part.html' with can_hide=False %}
         {% endfor %}
     </div>
 
@@ -110,5 +66,54 @@
     {% include "misc/pagination.part.html" with position="bottom" %}
 
 
-    {% include "misc/message_form.html" %}
+    
+    {% captureas form_action %}
+        {% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}
+    {% endcaptureas %}
+
+    {% include "misc/message_form.html" with member=user %}
+{% endblock %}
+
+
+
+{% block sidebar_actions %}
+    <div class="mobile-menu-bloc mobile-all-links mobile-show-ico" data-title="Actions">
+        <h3>Actions</h3>
+        <ul>
+            <li>
+                <a href="{% url "zds.mp.views.new" %}">
+                    Nouvelle conversation
+                </a>
+            </li>
+
+            {% if topic.author == user %}
+                <li>
+                    <a href="#add-participant" class="open-modal">Ajouter un membre</a>
+                    <form action="{% url "zds.mp.views.add_participant" %}" mathod="post" id="add-participant" class="modal">
+                        <p>
+                            Vous allez rajouter un nouveau membre dans la conversation privé.
+                        </p>
+                        <input type="hidden" name="topic_pk" value="{{ topic.pk }}">
+                        <input type="text" class="input" name="user_pk" placeholder="Pseudo du membre">
+
+                        {% csrf_token %}
+                        <button type="submit">Ajouter</button>
+                    </form>
+                </li>
+            {% endif %}
+
+            <li>
+                <a href="#leave-conversation" class="open-modal">Quitter la conversation</a>
+                <form action="{% url "zds.mp.views.leave" %}" mathod="post" id="leave-conversation" class="modal">
+                    <p>
+                        Attention, vous vous appretez à quitter définitivement de cette conversation.
+                    </p>
+                    <input type="hidden" name="topic_pk" value="{{ topic.pk }}">
+
+                    {% csrf_token %}
+                    <button type="submit">Confirmer</button>
+                </form>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
