--- a/templates/mp/post/new.html
+++ b/templates/mp/post/new.html
@@ -1,5 +1,6 @@
 {% extends "mp/base.html" %}
 {% load crispy_forms_tags %}
+{% load captureas %}
 
 
 
@@ -36,7 +37,11 @@
         </div>
     {% endif %}
 
-    {% include "misc/message_form.html" with member=user %}
+    {% captureas form_action %}
+        {% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}
+    {% endcaptureas %}
+
+    {% include "misc/message_form.html" with member=user text=form.text.value %}
 
     {% if form.text.value %}
         {% include "misc/previsualization.part.html" with text=form.text.value %}
