--- a/templates/mp/topic/new.html
+++ b/templates/mp/topic/new.html
@@ -1,5 +1,4 @@
 {% extends "mp/base.html" %}
-{% load emarkdown %}
 {% load crispy_forms_tags %}
 
 
@@ -23,11 +22,7 @@
 
 
 {% block content %}
-    {% captureas form_action %}
-        {% url "zds.mp.views.answer" %}?sujet={{ topic.pk }}
-    {% endcaptureas %}
-
-    {% include "misc/message_form.html" with member=user %}
+    {% crispy form %}
 
     {% if form.text.value %}
         {% include "misc/previsualization.part.html" with text=form.text.value %}
